# physical_AI_rs500

./: .gitignore  CLAUDE.md  CURRENT_TASK.md  DIFFICULTY.md  FINISHED_TASK.md  PREPARED_TASK.md  PROJECT_MAP.md  README.md  TASK.md  requirements-test.txt  task.md  task_autonomou.md  tonight_prompt.txt  tonight_prompt_done.txt
.claude/: settings.local.json
.claude/agents/: deploy-engineer.md  robotics-engineer.md
.claude/rules/: arch-management.md  critical-thinking.md  task-management.md
.claude/skills/: build-smart.md  dds-troubleshoot.md  launch-preflight.md  param-tuning-log.md  rosbag-workflow.md  sim-batch.md  simulation-report.md  task-sync.md  task-wrap.md  test-runner.md  tf-check.md
.github/workflows/: test.yml
TASK_ARCHIVE/: 2026-03.md
agents/: __init__.py  __main__.py  main.py
agents/config/: agents_config.yaml
agents/core/: __init__.py  base_agent.py  message_bus.py  task.py  task_tracker.py
agents/docs/: README.md  checklist.md
agents/modeling/: __init__.py  modeling_agent.py  physics_modeler.py  vehicle_modeler.py  world_modeler.py
agents/project_leader/: __init__.py  project_leader_agent.py
agents/research/: __init__.py  document_writer.py  research_agent.py  web_searcher.py
docs/: application_definition.md  foxglove_gap_analysis.md  literature_review_dynamics_control.md  synthetic_test_guide.md
docs/arch/: ARCH-001_tf_tree.md  ARCH-002_dual_ekf.md  ARCH-003_nav2_stack.md  ARCH-004_hybrid_e2e_agricultural.md  ARCH-005_camera_only_perception.md  INDEX.md  SYSTEM_OVERVIEW.md  TEMPLATE.md
docs/research/: gazebo_tracked_vehicle_simulation_research.md  path_planning_and_slam_literature_review.md  perception_sensor_fusion_survey.md  visual_slam_camera_only_survey.md
docs/tasks/: C01_cheongsong_orchard_world.md  C02_yeongwol_sinil_world.md  C03_launch_world_selection.md  C04_real_terrain_pipeline.md  C05_agricultural_heightmap.md  C06_simulation_quick_fixes.md  C07_research_dynamics_control.md  C08_research_path_planning_slam.md  C09_research_perception_fusion.md  C10_research_gazebo_simulation.md  C11_application_definition.md  C12_agent_system_manual.md  C13_task_tracker.md  C14_agent_system.md  C15_gazebo_simulation_integration.md  C16_ros2_project_structure.md  C17_pure_pursuit_path_tracking.md  C18_icr_skid_steer_model.md  C19_dual_ekf_sensor_fusion.md  C20_nav2_smac_planner.md  C21_mppi_local_planner.md  C22_lidar_obstacle_detection.md  C23_yolo_camera_detection.md  C24_multi_friction_zones.md  C25_sil_test_framework.md  C26_slip_compensated_pure_pursuit.md  C27_calibrated_skid_steer.md  C28_coverage_planner.md  C29_lio_sam_slam.md  C30_semantic_segmentation.md  C31_camera_lidar_fusion.md  C32_wsl2_ros2_setup.md  C33_unit_tests.md  C34_ad_core_separation.md  C35_ros2_node_packages.md  C36_ss500_can_codec.md  C37_ad_bringup_launcher.md  C38_level2_physics_simulation.md
docs/프로젝트/: TASK.md  overnight_brief_20260326.md  overnight_brief_20260330.md
foxglove-extensions/agriculture-panel/: CHANGELOG.md  README.md  package-lock.json  package.json  (+1 more)
scripts/: stp_to_sdf.py
src/_archived/ad_simulation/: CMakeLists.txt  setup.py
src/_archived/ad_simulation/launch/: simulation.launch.py
src/_archived/ad_simulation/urdf/: ss500.urdf.xacro
src/ad_bringup/: package.xml  setup.cfg  setup.py
src/ad_bringup/ad_bringup/: __init__.py  cmd_vel_relay.py  gps_to_foxglove_node.py  system_monitor_node.py  waypoint_manager_node.py
src/ad_bringup/config/: bridge_config.yaml  dual_ekf.yaml  foxglove_comparison_layout.json  foxglove_debug_layout.json  foxglove_layout.json  foxglove_production_layout.json  nav2_params.yaml
src/ad_bringup/launch/: crop_row_test_launch.py  full_system_launch.py  navigation_launch.py  record_launch.py  recording_launch.py  simulation_launch.py  synthetic_test_launch.py  waypoint_nav_demo_launch.py
src/ad_bringup/maps/: empty_map.yaml
src/ad_bringup/models/ss500/: model.config  model.sdf
src/ad_bringup/urdf/: ss500.urdf.xacro
src/ad_bringup/worlds/: flat_field.sdf  pear_orchard.sdf
src/ad_can_bridge/: package.xml  setup.cfg  setup.py
src/ad_can_bridge/ad_can_bridge/: __init__.py  can_bridge_node.py  ss500_codec.py
src/ad_can_bridge/config/: can_params.yaml
src/ad_can_bridge/launch/: can_bridge_launch.py
src/ad_can_bridge/test/: test_can_bridge_logic.py  test_ss500_codec.py
src/ad_planning/: package.xml  setup.cfg  setup.py
src/ad_planning/ad_planning/: __init__.py  diffusion_planner.py  planning_node.py
src/ad_planning/config/: planning_params.yaml
src/ad_planning/launch/: planning_launch.py
src/ad_planning/test/: test_planning_module.py
src/ad_simulation/: CMakeLists.txt  package.xml
src/ad_simulation/config/: bridge_config.yaml  simulation.rviz
src/ad_simulation/launch/: simulation_launch.py
src/ad_simulation/models/tracked_vehicle/: model.config  model.sdf
src/ad_simulation/resource/: ad_simulation
src/ad_simulation/test/: __init__.py  conftest.py  sil_runner.py  test_straight_drive.py  test_turn.py
src/ad_simulation/urdf/: ss500_base.urdf.xacro  ss500_gazebo.urdf.xacro  ss500_sensors.urdf.xacro
src/ad_simulation/worlds/: agricultural_field.sdf  crop_field.world  generate_heightmap.py  render_all_worlds.py  visualize_agricultural.py
src/ad_simulation/worlds/real_terrain/: cheongsong_orchard.sdf  cheongsong_osm_data.json  fetch_terrain_data.py  generate_orchard_world.py  sinil_osm_data.json  visualize_terrain.py  yeongwol_sinil.sdf
src/team_leader/: package.xml  setup.cfg  setup.py
src/team_leader/config/: dual_ekf.yaml  lio_sam_params.yaml  params.yaml
src/team_leader/launch/: navigation_launch.py  team_leader_launch.py
src/team_leader/team_leader/: camera_detector.py  control.py  coverage_planner.py  leader_node.py  localization_manager.py  perception.py  planning.py  pure_pursuit.py  semantic_segmenter.py  sensor_fusion.py  skid_steer_model.py
src/team_leader/test/: test_leader.py  test_slip_compensated_pursuit.py
tools/: c50_simulation.py  module_test_report.py  path_follower_sim.py  physics_simulator.py  scenario_runner.py
참고자료/: SS500_CAN_ICD.md
(+99 files in other folders)
