<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ad_bringup</name>
  <version>0.2.0</version>
  <description>자율주행 시스템 통합 런처</description>
  <maintainer email="team@todo.todo">team</maintainer>
  <license>MIT</license>

  <!-- 기존 의존성 -->
  <exec_depend>ad_perception</exec_depend>
  <exec_depend>ad_planning</exec_depend>
  <exec_depend>ad_control</exec_depend>
  <exec_depend>ad_can_bridge</exec_depend>
  <exec_depend>ad_interfaces</exec_depend>
  <exec_depend>ad_core</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- Nav2 웨이포인트 네비게이션 -->
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- Gazebo Harmonic 시뮬레이션 -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- 로봇 모델 (URDF/TF) -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Foxglove 연동 -->
  <exec_depend>foxglove_bridge</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
