<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ad_simulation</name>
  <version>0.1.0</version>
  <description>농업용 궤도차량 Gazebo 시뮬레이션 패키지</description>
  <maintainer email="team@example.com">team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>team_leader</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
